--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Pesan Dariku Buat Bunga &#128157</title>
+    <title>Pesan Dariku Buat Aliya &#128157</title>
     <style>@import url(https://fonts.googleapis.com/css?family=Ubuntu); @import url(https://fonts.googleapis.com/css?family=Handlee); 
     * { padding: 0; margin: 0; font-family: "Ubuntu", sans-serif; } 
     .bg { position: absolute; height: 100%; width: 100%; background-size: cover; background-position: center; filter: brightness(0.5); } 
