--- a/depan.html
+++ b/depan.html
@@ -18,10 +18,10 @@
     </div>
 
     <div class="greetings">
-            <span>B</span>
-            <span>U</span>
-            <span>N</span>
-            <span>G</span>
+            <span>A</span>
+            <span>L</span>
+            <span>I</span>
+            <span>Y</span>
             <span>A</span>
         </div>
     <div class="description">
